<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:onClick="startChronometer"
        android:layout_below="@+id/chronometer"
        android:layout_marginLeft="60dp"/>
    <Button
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_pause"
        android:onClick="pauseChronometer"
        android:layout_below="@+id/chronometer"
        android:layout_toEndOf="@+id/btn_start"
        />
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:onClick="resetChronometer"
        android:layout_below="@+id/chronometer"
        android:layout_toEndOf="@+id/btn_pause"/>

    <Button
        android:id="@+id/btn_event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="calendarEvent"
        android:text="@string/btn_calendar_event"
        android:layout_below="@+id/btn_reset"
        android:layout_marginTop="10dp"/>

    <Button
        android:text="@string/btn_capture_video"
        android:id="@+id/CaptureVideoButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_event"
        android:layout_marginTop="10dp">
    </Button>
    <Button
        android:text="@string/btn_capture_without_data"
        android:id="@+id/CaptureVideoWithoutDataButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CaptureVideoButton"
        android:layout_marginTop="10dp">
    </Button>
    <Button
        android:text="@string/btn_play_video"
        android:id="@+id/PlayVideoButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CaptureVideoWithoutDataButton"
        android:layout_marginTop="10dp">
    </Button>
    <VideoView
        android:id="@+id/VideoView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/PlayVideoButton"
        android:layout_marginLeft="75dp">
    </VideoView>

    <Button
        android:id="@+id/pickcontact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pick_contack"
        android:layout_below="@+id/VideoView"/>

    <TextView
        android:id="@+id/contactname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickcontact"
        />
    <TextView
        android:id="@+id/contactnumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactname"
        />
    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="eg. www.android developer.com"
        android:layout_below="@+id/contactnumber">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_search"
        android:layout_gravity="center"
        android:onClick="onSearchClick"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editTextInput"/>

</RelativeLayout>